--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "messenger",
   "version": "0.1.0",
   "description": "",
-  "main": "./src/index.js",
+  "main": "src/index.ts",
   "engines": {
     "node": ">=12.0.0"
   },
