--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "scripts": {
     "dev": "parcel static/index.html --open --port 3000",
     "start": "parcel static/index.html -p 3000",
+    "lint:es": "eslint --fix \"src/**/*.{ts,js}\"",
+    "lint:css": "stylelint --config .stylelintrc.json --fix \"src/**/*.module.css\"",
     "build": "parcel build",
     "server": "node server.js"
   },
@@ -18,19 +20,29 @@
   "devDependencies": {
     "@types/handlebars": "^4.1.0",
     "@types/uuid": "^8.3.4",
+    "@typescript-eslint/eslint-plugin": "^5.6.0",
+    "@typescript-eslint/parser": "^5.6.0",
     "autoprefixer": "^9.8.8",
-    "express": "^4.17.1",
+    "eslint": "^8.4.1",
+    "eslint-config-airbnb": "^19.0.2",
+    "eslint-plugin-import": "^2.25.3",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-react": "^7.27.1",
     "handlebars": "^4.7.7",
     "handlebars-loader": "^1.7.1",
     "parcel-bundler": "^1.12.5",
     "parcel-plugin-handlebars-precompile": "^1.0.2",
     "path": "^0.12.7",
-    "postcss": "^7.0.39",
+    "postcss": "^8.3.11",
+    "postcss-lit": "^0.4.3",
     "postcss-loader": "^6.2.1",
     "postcss-modules": "^3.2.2",
+    "stylelint": "^14.6.0",
+    "stylelint-config-standard": "^24.0.0",
     "typescript": "^4.5.5"
   },
   "dependencies": {
+    "express": "^4.17.1",
     "normalize.css": "^8.0.1",
     "uuid": "^8.3.2"
   }
