--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
   "engines": {
     "node": ">=12.0.0"
   },
+  "prettier": {
+    "tabWidth": 2,
+    "printWidth": 120
+  },
   "scripts": {
     "dev": "parcel static/index.html --open --port 3000",
     "start": "parcel static/index.html -p 3000",
@@ -37,6 +41,7 @@
     "postcss-lit": "^0.4.3",
     "postcss-loader": "^6.2.1",
     "postcss-modules": "^3.2.2",
+    "prettier": "2.6.1",
     "stylelint": "^14.6.0",
     "stylelint-config-standard": "^24.0.0",
     "typescript": "^4.5.5"
