--- a/package.json
+++ b/package.json
@@ -32,15 +32,15 @@
     "eslint-plugin-import": "^2.25.3",
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-react": "^7.27.1",
-    "handlebars": "^4.7.7",
+    "handlebars": "4.7.7",
     "handlebars-loader": "^1.7.1",
     "parcel-bundler": "^1.12.5",
     "parcel-plugin-handlebars-precompile": "^1.0.2",
     "path": "^0.12.7",
-    "postcss": "^8.3.11",
-    "postcss-lit": "^0.4.3",
-    "postcss-loader": "^6.2.1",
-    "postcss-modules": "^3.2.2",
+    "postcss": "8.3.11",
+    "postcss-lit": "0.4.3",
+    "postcss-loader": "6.2.1",
+    "postcss-modules": "3.2.2",
     "prettier": "2.6.1",
     "stylelint": "^14.6.0",
     "stylelint-config-standard": "^24.0.0",
